Bug 261799 - When using dual monitors with separate virtual desktop, setting a konsole window to Full Screen Mode makes all other konsole windows stay above other windows in the other monitor/virtual desktop
Summary: When using dual monitors with separate virtual desktop, setting a konsole wi...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: xinerama (other bugs)
Version First Reported In: 4.8.0
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords:
: 169894 214417 (view as bug list)
Depends on:
Blocks:
 
Reported: 2011-01-01 18:07 UTC by Waldemar Szostak
Modified: 2024-10-12 10:00 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Waldemar Szostak 2011-01-01 18:07:34 UTC
Version:           2.5.4 (using KDE 4.5.4) 
OS:                Linux

I have two-monitor setup, each with a separate virtual desktop. Both of them have window bars restricted to the current screen and monitor and desktop.

When I have Konsole windows on both desktops and one of the windows is in the full screen mode, the other one won't hide when switching between windows (and it's not set to be 'always on top'). By the window switching I mean using alt-tab or clicking on the window in the window/task bar.

When the first window is maximalised, then the other one switches properly.

The window switching mechanism works as expected (regardless of the window states) also when both Konsole windows are on the same screen.

Reproducible: Always

Steps to Reproduce:
1. Open one konsole in the full-screen mode on one (1) screen.
2. Open another konsole on another (2) screen (also launch any other window).
3. Try to switch to any other window on screen 2.

Actual Results:  
Konsole window (even though it's not maximalised and not in the full-screen mode) will stay on top.

Expected Results:  
It should be possible to switch to any other window.

OS: Linux (x86_64) release 2.6.36-gentoo
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 netizen 2011-07-07 16:35:55 UTC
This happens to me, same steps. Also dual monitor and gentoo here.
It gets temporarily  fixed by:
$ killall kwin && nohup kwin --replace &
But as long as you click on the full screen konsole that covers a panel, problem reappears.
Comment 2 Jekyll Wu 2012-02-03 05:47:58 UTC
*** Bug 214417 has been marked as a duplicate of this bug. ***
Comment 3 Thomas Lübking 2012-02-05 23:26:51 UTC
kwin/layers.cpp:526

//         if (minimum_layer.contains((*it)->group())
//                 && minimum_layer[(*it)->group()] == ActiveLayer
//                 && (l == NormalLayer || l == AboveLayer)) {
//             l = minimum_layer[(*it)->group()];

This is however no acceptable patch, but the source of the issue.
This is NOT a dupe of bug #293265
Comment 4 Thomas Lübking 2012-02-08 22:31:16 UTC
probably dupe of bug #246695
Comment 5 Thomas Lübking 2012-03-06 17:19:42 UTC
*** Bug 169894 has been marked as a duplicate of this bug. ***
Comment 6 Thomas Lübking 2012-03-11 03:25:41 UTC
https://git.reviewboard.kde.org/r/104186/
Comment 7 Thomas Lübking 2012-03-14 00:20:31 UTC
Git commit d854fc98630bcdbc0d450ae7bc642240f5f535ad by Thomas Lübking.
Committed on 07/03/2012 at 15:19.
Pushed by luebking into branch 'KDE/4.8'.

select minimum layer per screen
REVIEW: 104186

M  +15   -12   kwin/layers.cpp

http://commits.kde.org/kde-workspace/d854fc98630bcdbc0d450ae7bc642240f5f535ad
Comment 8 netizen 2012-03-14 14:34:18 UTC
Patch works for me. Thank you