select minimum layer per screen

BUG: 261799
REVIEW: 104186